FUL-2539: Hid password reveal button in IE.

--- a/jquery.password_field.sass
+++ b/jquery.password_field.sass
@@ -1,5 +1,7 @@
-input.visiblity-toggle
+input.visibility-toggle
     padding-right: 40px
+    &::-ms-reveal
+        display: none
 
 .visiblity-toggle-wrapper
     input
