FUL-2540: Added initial version of password strength indicator logic

--- a/jquery.password_field.sass
+++ b/jquery.password_field.sass
@@ -14,3 +14,77 @@ input.visibility-toggle
         z-index: 1000
         position: relative
         cursor: pointer
+
+ul.password-validity
+    list-style: none
+    text-align: left
+    padding-left: 20px
+
+    @media (max-width: 768px)
+        display: none
+
+    li:before
+        font: normal normal normal 14px/1 FontAwesome
+        content: "\f057"
+        margin: 0 5px 0 -15px
+        color: red
+
+    li.valid:before
+        content: "\f058"
+        color: green
+
+
+.password-validity-header
+    text-align: left
+    margin-left: 5px
+
+    @media (max-width: 768px)
+        display: none
+
+.password-strength
+    ul
+        list-style: none
+        margin: 0
+        padding: 3px 0
+        border: 0
+        font-size: 0
+
+        li
+            width: 19%
+            display: inline-block
+            background-color: gray
+            height: 3px
+            margin: 0 1px
+            padding: 0
+            border: 0
+
+
+    &[data-strength='week']
+        li.week
+            background-color: red
+        div.password-strength-text
+            color: red
+    &[data-strength='soso']
+        li.so-so
+            background-color: orangered
+        div.password-strength-text
+            color: orangered
+    &[data-strength='okay']
+        li.okay
+            background-color: orange
+        div.password-strength-text
+            color: orange
+    &[data-strength='good']
+        li.good
+            background-color: lightgreen
+        div.password-strength-text
+            color: lightgreen
+    &[data-strength='strong']
+        li.strong
+            background-color: green
+        div.password-strength-text
+            color: green
+
+    .password-strength-text
+        position: absolute
+        right: 0
