--- a/jquery.password_field.sass
+++ b/jquery.password_field.sass
@@ -3,13 +3,12 @@ input.visibility-toggle
     &::-ms-reveal
         display: none
 
-.visiblity-toggle-wrapper
+span.visiblity-toggle-wrapper
     input
         display: none
     label
         float: right
-        margin-right: 8px
-        margin-top: -30px
+        margin: -30px 8px 0 0
         padding: 5px
         z-index: 1000
         position: relative
