--- a/jquery.password_field.sass
+++ b/jquery.password_field.sass
@@ -18,6 +18,7 @@ ul.password-validity
     list-style: none
     text-align: left
     padding-left: 20px
+    margin: 0
 
     @media (max-width: 768px)
         display: none
@@ -41,6 +42,8 @@ ul.password-validity
         display: none
 
 .password-strength
+    position: relative
+
     ul
         list-style: none
         margin: 0
@@ -49,7 +52,7 @@ ul.password-validity
         font-size: 0
 
         li
-            width: 19%
+            width: calc(20% - 2px)
             display: inline-block
             background-color: gray
             height: 3px
@@ -85,5 +88,9 @@ ul.password-validity
             color: green
 
     .password-strength-text
-        position: absolute
-        right: 0
+        text-align: center
+
+        @media (min-width: 769px)
+            position: absolute
+            right: 0
+
