FUL-2540: Change strength namingChanged colour scheme

--- a/jquery.password_field.sass
+++ b/jquery.password_field.sass
@@ -61,31 +61,31 @@ ul.password-validity
             border: 0
 
 
-    &[data-strength='week']
-        li.week
-            background-color: red
+    &[data-strength='weak']
+        li.weak
+            background-color: #DE404D
         div.password-strength-text
-            color: red
-    &[data-strength='soso']
-        li.so-so
-            background-color: orangered
-        div.password-strength-text
-            color: orangered
+            color: #DE404D
     &[data-strength='okay']
         li.okay
-            background-color: orange
+            background-color: #DE404D
         div.password-strength-text
-            color: orange
+            color: #DE404D
+    &[data-strength='medium']
+        li.medium
+            background-color: #FCE147
+        div.password-strength-text
+            color: #FCE147
     &[data-strength='good']
         li.good
-            background-color: lightgreen
+            background-color: #1E9E73
         div.password-strength-text
-            color: lightgreen
+            color: #1E9E73
     &[data-strength='strong']
         li.strong
-            background-color: green
+            background-color: #1E9E73
         div.password-strength-text
-            color: green
+            color: #1E9E73
 
     .password-strength-text
         text-align: center
