FUL-2540: Changed coloursintroduced variables in stylesheet

--- a/jquery.password_field.sass
+++ b/jquery.password_field.sass
@@ -27,11 +27,11 @@ ul.password-validity
         font: normal normal normal 14px/1 FontAwesome
         content: "\f057"
         margin: 0 5px 0 -15px
-        color: red
+        color: #DE404D
 
     li.valid:before
         content: "\f058"
-        color: green
+        color: #1E9E73
 
 
 .password-validity-header
@@ -40,6 +40,12 @@ ul.password-validity
 
     @media (max-width: 768px)
         display: none
+
+$weak-color: #DE404D
+$okay-color: #DE404D
+$medium-color: #FCE147
+$good-color: #1E9E73
+$strong-color: #1E9E73
 
 .password-strength
     position: relative
@@ -54,38 +60,37 @@ ul.password-validity
         li
             width: calc(20% - 2px)
             display: inline-block
-            background-color: gray
+            background-color: #666
             height: 3px
             margin: 0 1px
             padding: 0
             border: 0
 
-
     &[data-strength='weak']
         li.weak
-            background-color: #DE404D
+            background-color: $weak-color
         div.password-strength-text
-            color: #DE404D
+            color: $weak-color
     &[data-strength='okay']
         li.okay
-            background-color: #DE404D
+            background-color: $okay-color
         div.password-strength-text
-            color: #DE404D
+            color: $okay-color
     &[data-strength='medium']
         li.medium
-            background-color: #FCE147
+            background-color: $medium-color
         div.password-strength-text
-            color: #FCE147
+            color: $medium-color
     &[data-strength='good']
         li.good
-            background-color: #1E9E73
+            background-color: $good-color
         div.password-strength-text
-            color: #1E9E73
+            color: $good-color
     &[data-strength='strong']
         li.strong
-            background-color: #1E9E73
+            background-color: $strong-color
         div.password-strength-text
-            color: #1E9E73
+            color: $strong-color
 
     .password-strength-text
         text-align: center
