FUL-2540: Changed plugin to use invalid/good/strong measures instead of separate validity and strength meter

--- a/jquery.password_field.sass
+++ b/jquery.password_field.sass
@@ -23,6 +23,9 @@ ul.password-validity
     @media (max-width: 768px)
         display: none
 
+        &.show-on-mobile
+            display: block
+
     li:before
         font: normal normal normal 14px/1 FontAwesome
         content: "\f057"
@@ -33,7 +36,6 @@ ul.password-validity
         content: "\f058"
         color: #1E9E73
 
-
 .password-validity-header
     text-align: left
     margin-left: 5px
@@ -41,10 +43,8 @@ ul.password-validity
     @media (max-width: 768px)
         display: none
 
-$weak-color: #DE404D
-$okay-color: #DE404D
-$medium-color: #FCE147
-$good-color: #1E9E73
+$invalid-color: #DE404D
+$good-color: #FCE147
 $strong-color: #1E9E73
 
 .password-strength
@@ -58,44 +58,42 @@ $strong-color: #1E9E73
         font-size: 0
 
         li
-            width: calc(20% - 2px)
+            width: calc(33% - 2px)
             display: inline-block
-            background-color: #666
-            height: 3px
+            background-color: #e6e6e6
+            height: 6px
             margin: 0 1px
             padding: 0
             border: 0
+    div.password-strength-text .help
+        display: none
 
-    &[data-strength='weak']
-        li.weak
-            background-color: $weak-color
+    &[data-strength='invalid']
+        li.invalid
+            background-color: $invalid-color
         div.password-strength-text
-            color: $weak-color
-    &[data-strength='okay']
-        li.okay
-            background-color: $okay-color
-        div.password-strength-text
-            color: $okay-color
-    &[data-strength='medium']
-        li.medium
-            background-color: $medium-color
-        div.password-strength-text
-            color: $medium-color
+            color: $invalid-color
+            .help
+                display: inline
     &[data-strength='good']
-        li.good
+        li.good, li.invalid
             background-color: $good-color
         div.password-strength-text
             color: $good-color
     &[data-strength='strong']
-        li.strong
+        li.strong, li.good, li.invalid
             background-color: $strong-color
         div.password-strength-text
             color: $strong-color
 
     .password-strength-text
         text-align: center
+        span
+            cursor: pointer
 
         @media (min-width: 769px)
             position: absolute
             right: 0
+            span
+                cursor: default
 
