FUL-2540: Added class names to make login more straightforward

--- a/jquery.password_field.sass
+++ b/jquery.password_field.sass
@@ -58,7 +58,7 @@ $strong-color: #1E9E73
         border: 0
         font-size: 0
         li
-            width: calc(33% - 2px)
+            width: calc(33.3% - 2px)
             display: inline-block
             background-color: #e6e6e6
             height: 6px
@@ -71,22 +71,22 @@ $strong-color: #1E9E73
     &[data-strength='invalid']
         li.invalid
             background-color: $invalid-color
-        div.password-strength-text
+        div.password-strength-text-wrapper
             color: $invalid-color
 
     &[data-strength='good']
         li.good, li.invalid
             background-color: $good-color
-        div.password-strength-text
+        div.password-strength-text-wrapper
             color: $good-color
     &[data-strength='strong']
         li.strong, li.good, li.invalid
             background-color: $strong-color
-        div.password-strength-text
+        div.password-strength-text-wrapper
             color: $strong-color
 
 
-    .password-strength-text
+    .password-strength-text-wrapper
         text-align: center
 
         @media (min-width: 769px)
@@ -99,9 +99,9 @@ $strong-color: #1E9E73
                 cursor: pointer
 
     //Help icon
-    div.password-strength-text .help
+    div.password-strength-text-wrapper .help
         display: none
 
     @media (max-width: 768px)
-        &[data-strength='invalid'] div.password-strength-text .help
+        &[data-strength='invalid'] div.password-strength-text-wrapper .help
             display: inline
