FUL-2540: Added correct 'good' (orange) color

--- a/jquery.password_field.sass
+++ b/jquery.password_field.sass
@@ -44,8 +44,7 @@ ul.password-validity
         display: none
 
 $invalid-color: #DE404D
-#TODO should be replace
-$good-color: #FCE147
+$good-color: #FF9514
 $strong-color: #1E9E73
 
 .password-strength
