FUL-2815: Added empty state to the validator

--- a/jquery.password_field.sass
+++ b/jquery.password_field.sass
@@ -28,12 +28,14 @@ ul.password-validity
 
     li:before
         font: normal normal normal 14px/1 FontAwesome
-        content: "\f057"
+        content: "\f058"
         margin: 0 5px 0 -15px
+
+    li.invalid:before
+        content: "\f057"
         color: #DE404D
 
     li.valid:before
-        content: "\f058"
         color: #1E9E73
 
 .password-validity-header
