FUL-2816: Replaced good with acceptable

--- a/jquery.password_field.sass
+++ b/jquery.password_field.sass
@@ -46,7 +46,7 @@ ul.password-validity
         display: none
 
 $invalid-color: #DE404D
-$good-color: #FF9514
+$acceptable-color: #FF9514
 $strong-color: #1E9E73
 
 .password-strength
@@ -75,13 +75,13 @@ $strong-color: #1E9E73
         div.password-strength-text-wrapper
             color: $invalid-color
 
-    &[data-strength='good']
-        li.good, li.invalid
-            background-color: $good-color
+    &[data-strength='acceptable']
+        li.acceptable, li.invalid
+            background-color: $acceptable-color
         div.password-strength-text-wrapper
-            color: $good-color
+            color: $acceptable-color
     &[data-strength='strong']
-        li.strong, li.good, li.invalid
+        li.strong, li.acceptable, li.invalid
             background-color: $strong-color
         div.password-strength-text-wrapper
             color: $strong-color
