--- a/jquery.password_field.sass
+++ b/jquery.password_field.sass
@@ -23,8 +23,37 @@ ul.password-validity
     @media (max-width: 768px)
         display: none
 
-        &.show-on-mobile
+        &.invalid.focus.has-password
             display: block
+            position: absolute
+            border: 1px solid #cacaca
+            background: white
+
+            left: 0px
+            right: 0px
+            bottom: 60px /* fallback - overwritten in js */
+
+            margin: 15px
+            padding-top: 10px
+            padding-bottom: 10px
+            border-radius: 4px
+            box-shadow: 0px 5px 18px 0px rgba(0, 0, 0, 0.47)
+        &:before
+            content: ""
+            position: absolute
+            background: white
+            right: 10px
+            bottom: -6px
+            width: 25px
+            height: 25px
+            -webkit-box-shadow: 6px 5px 9px -9px black
+            -moz-box-shadow: 6px 5px 9px -9px black
+            box-shadow: 6px 5px 9px -9px black
+            -webkit-transform: rotate(45deg)
+            -moz-transform:    rotate(45deg)
+            -ms-transform:     rotate(45deg)
+            -o-transform:      rotate(45deg)
+
 
     li:before
         font: normal normal normal 14px/1 FontAwesome
@@ -98,11 +127,3 @@ $strong-color: #1E9E73
             cursor: default
             @media (max-width: 768px)
                 cursor: pointer
-
-    //Help icon
-    div.password-strength-text-wrapper .help
-        display: none
-
-    @media (max-width: 768px)
-        &[data-strength='invalid'] div.password-strength-text-wrapper .help
-            display: inline
