FUL-4153: Hide password strength label on small screens

--- a/jquery.password_field.sass
+++ b/jquery.password_field.sass
@@ -122,6 +122,9 @@ $strong-color: #1E9E73
         @media (min-width: 769px)
             position: absolute
             right: 0
+            
+        @media (max-width: 768px)
+            display: none
 
         span
             cursor: default
