--- a/jquery.password_field.sass
+++ b/jquery.password_field.sass
@@ -1,3 +1,6 @@
+@import "node_modules/@fortawesome/fontawesome-pro/scss/fontawesome.scss"
+@import "node_modules/@fortawesome/fontawesome-pro/scss/solid.scss"
+
 input.visibility-toggle
     padding-right: 40px
     &::-ms-reveal
@@ -56,8 +59,11 @@ ul.password-validity
 
 
     li:before
-        font: normal normal normal 14px/1 FontAwesome
-        content: "\f058"
+        @extend %fa-icon
+        @extend .fas
+        content: $fa-var-circle
+        font-size: 14px/1
+        font-weight: 900
         margin: 0 5px 0 -15px
 
     li.invalid:before
@@ -122,7 +128,7 @@ $strong-color: #1E9E73
         @media (min-width: 769px)
             position: absolute
             right: 0
-            
+
         @media (max-width: 768px)
             display: none
 
