FUL-12472: Font Awesome added to dependencies since it's already used in this package

--- a/jquery.password_field.sass
+++ b/jquery.password_field.sass
@@ -1,5 +1,5 @@
-@import "node_modules/@fortawesome/fontawesome-pro/scss/fontawesome.scss"
-@import "node_modules/@fortawesome/fontawesome-pro/scss/solid.scss"
+@import "node_modules/@fortawesome/fontawesome-pro/scss/fontawesome"
+@import "node_modules/@fortawesome/fontawesome-pro/scss/solid"
 
 input.visibility-toggle
     padding-right: 40px
@@ -59,10 +59,10 @@ ul.password-validity
 
 
     li:before
-        @extend %fa-icon
+        @include fa-icon
         @extend .fas
-        content: $fa-var-circle
-        font-size: 14px/1
+        content: fa-content($fa-var-circle)
+        font-size: 14px
         font-weight: 900
         margin: 0 5px 0 -15px
 
