--- a/jquery.password_field.sass
+++ b/jquery.password_field.sass
@@ -1,6 +1,3 @@
-@import "node_modules/@fortawesome/fontawesome-pro/scss/fontawesome"
-@import "node_modules/@fortawesome/fontawesome-pro/scss/solid"
-
 input.visibility-toggle
     padding-right: 40px
     &::-ms-reveal
@@ -59,11 +56,8 @@ ul.password-validity
 
 
     li:before
-        @include fa-icon
-        @extend .fas
-        content: fa-content($fa-var-circle)
-        font-size: 14px
-        font-weight: 900
+        font: normal normal normal 14px/1 FontAwesome
+        content: "\f058"
         margin: 0 5px 0 -15px
 
     li.invalid:before
@@ -128,7 +122,7 @@ $strong-color: #1E9E73
         @media (min-width: 769px)
             position: absolute
             right: 0
-
+            
         @media (max-width: 768px)
             display: none
 
