FUL-12472: add possibility of overriding classes that use Font Awesome

--- a/jquery.password_field.sass
+++ b/jquery.password_field.sass
@@ -1,3 +1,5 @@
+$jquery-password-field-override: false !default
+
 input.visibility-toggle
     padding-right: 40px
     &::-ms-reveal
@@ -56,12 +58,16 @@ ul.password-validity
 
 
     li:before
-        font: normal normal normal 14px/1 FontAwesome
-        content: "\f058"
+        @if(not $jquery-password-field-override)
+            font: normal normal normal 14px/1 FontAwesome
+            content: "\f058"
+        @extend %jquery-password-field-validity !optional
         margin: 0 5px 0 -15px
 
     li.invalid:before
-        content: "\f057"
+        @if(not $jquery-password-field-override)
+            content: "\f057"
+        @extend %jquery-password-field-validity-invalid !optional
         color: #DE404D
 
     li.valid:before
